# BFT-Store

./: CMakeLists.txt  README.md  example.cpp
libbftstore/: CMakeLists.txt
libbftstore/cmake/: ProjectBoost.cmake  ProjectRocksDB.cmake  ProjectSecp256k1.cmake  ProjectSnappy.cmake  ProjectTBB.cmake
libbftstore/erasure-codes/: CMakeLists.txt  encoder_dispatcher.cpp  encoder_internal.h  export_defs.h  liberasure.cpp  liberasure.h  matrix.cpp  matrix.h  rs_encoder.cpp  rs_encoder.h  stream_api.h  stream_encode.cpp  stream_recover.cpp  symbol.cpp  symbol.h
libbftstore/erasure-codes/encode/: encode_adv.cpp  encode_avx2.cpp  encode_basic.cpp  encode_sse.cpp
libbftstore/gf-arithmetic/: CMakeLists.txt  detectcpu.h  encode.h  log_tables.cpp  lohi_table.cpp  lohi_table.h  matrix-inverse.cpp  matrix.cpp  matrix.h  symbol.cpp  symbol.h
libbftstore/gf-arithmetic/backends/: CMakeLists.txt  encode_adv.cpp  encode_avx2.cpp  encode_basic.cpp  encode_sse.cpp
libbftstore/include/: BlockCache.hpp  Common.h  Erasure.h  FixedHash.h  Hash.h  secure_vector.h  vector_ref.h
libbftstore/log-table-generator/: CMakeLists.txt  generate-log-tables  main.cpp
libbftstore/lohi-generator/: CMakeLists.txt  generate-lohi-table  main.cpp  symbol.h
libbftstore/src/: Erasure.cpp  FixedHash.cpp  Hash.cpp
